--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,8 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background: linear-gradient(to bottom, #d0e, #91f 100%); height: 900px;">
+  <body style="background: linear-gradient(to bottom,#91f, #d0e 100%); height: 800px;">
+  <!-- <body style="background: linear-gradient(to bottom, rgb(243, 142, 10), rgb(255, 192, 17) 100%); height: 900px;"> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
