--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,9 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Tammudu|Bungee+Shade|Diplomata|Fascinate+Inline|Finger+Paint|Knewave|Lobster|Lobster+Two|Love+Ya+Like+A+Sister|Mina&display=swap" rel="stylesheet">
+    <title>Trip-planner</title>
   </head>
-  <body style="background: linear-gradient(to bottom,#91f, #d0e 100%); height: 800px;">
+  <body style="background: linear-gradient(to bottom,#91f, #d0e 100%); height: 1000px;">
   <!-- <body style="background: linear-gradient(to bottom, rgb(243, 142, 10), rgb(255, 192, 17) 100%); height: 900px;"> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
