pushing updated style

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css?family=Baloo+Tammudu|Bungee+Shade|Diplomata|Fascinate+Inline|Finger+Paint|Knewave|Lobster|Lobster+Two|Love+Ya+Like+A+Sister|Mina&display=swap" rel="stylesheet">
     <title>Trip-planner</title>
   </head>
-  <body style="background: linear-gradient(to bottom,#91f, #d0e 100%); height: 1000px;">
+  <body style="background: linear-gradient(to bottom,rgb(17, 219, 255), rgb(238, 0, 0) 100%); height: 751px;">
   <!-- <body style="background: linear-gradient(to bottom, rgb(243, 142, 10), rgb(255, 192, 17) 100%); height: 900px;"> -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
