--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Baloo+Tammudu|Bungee+Shade|Diplomata|Fascinate+Inline|Finger+Paint|Knewave|Lobster|Lobster+Two|Love+Ya+Like+A+Sister|Mina&display=swap" rel="stylesheet">
-    <title>Trip-planner</title>
+    <title>Boongalo</title>
   </head>
   <body style="background: linear-gradient(to bottom,#91f, #d0e 100%); height: 1200px">
     <noscript>You need to enable JavaScript to run this app.</noscript>
